--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,22 @@
 /*  your css code here. If applicable */
+*{
+	margin:0;
+	padding:0;
+	box-sizing: border-box;
+}
+section{
+	padding:10px;
+	border:1px solid black;
+	background-color:lightgray;
+}
+.first{
+	border:0 solid black;
+	padding:15px;
+	background-color:white;
+	margin:10px;
+}
+p{
+	text-align:right;
+	text-decoration:bold;
+	font-size:auto;
+}
