--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 section{
 	padding:10px;
 	border:1px solid black;
-	background-color:lightgray;
+	background-color:rgb(229,228,226);
 }
 .first{
 	border:0 solid black;
