--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ section{
 	padding:10px;
 	border:1px solid black;
 	background-color:rgb(229,228,226);
+	width:90%;
 }
 .first{
 	border:0 solid black;
