--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/*  your css code here. If applicable */
 *{
 	margin:0;
 	padding:0;
@@ -6,7 +5,7 @@
 }
 section{
 	padding:10px;
-	border:1px solid black;
+	border:0 solid black;
 	background-color:rgb(229,228,226);
 	width:90%;
 }
@@ -20,4 +19,8 @@ p{
 	text-align:right;
 	text-decoration:bold;
 	font-size:auto;
+}
+.test{
+	margin:15px;
+	padding:1px;
 }
