--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 	padding:0;
 	box-sizing: border-box;
 }
-outer{
+.out{
 	padding:10px;
 	border:0 solid black;
 	background-color:#f5f5f5;
@@ -15,7 +15,7 @@ outer{
 	background-color:rgb(229,228,226);
 	margin:10px;
 }
-p{
+.p{
 	text-align:right;
 	font-size:auto;
 	font-style:italic;
